# Nuaza-s-Fanorona

./: CMakeLists.txt  README.md  build.sh
include/: function.h
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  function.cpp
test/: CMakeLists.txt
